--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "foodapp",
   "version": "1.0.0",
   "scripts": {
-    "start":"parcel index.html",
-    "build":"parel build index.html",
+    "start": "parcel index.html",
+    "build": "parel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.1"
   }
 }
